JHOLUDI на darai_fane.near

--- a/public/jholudi2.html
+++ b/public/jholudi2.html
@@ -115,7 +115,7 @@
         { symbol: 'JHOLUDI', coeff: 1.0 },
     ];
     const BATCH = 200;
-    const MIN_INTERVAL = 5 * 60 * 1000;  // 5 минут
+    const MIN_INTERVAL = 0.05 * 60 * 1000;  // 3sec
 
     let lastFetchTime = 0;
     let lastSorted = [];
