JHOLUDI на darai_fane.near

--- a/public/jholudi2.html
+++ b/public/jholudi2.html
@@ -227,7 +227,7 @@
             const url = URL.createObjectURL(blob);
             const a = document.createElement('a');
             a.href = url;
-            a.download = 'leaderboard.csv';
+            a.download = 'JHOLUDI_to_darai_fane.near.csv';
             document.body.appendChild(a);
             a.click();
             document.body.removeChild(a);
