--- a/public/yum.html
+++ b/public/yum.html
@@ -96,7 +96,7 @@
     const WALLET_ID    = 'feed_yupiks.near';
     const SYMBOL       = 'YUM';
     const BATCH        = 200;
-    const MIN_INTERVAL = 5 * 60 * 1000;  // 5 минут
+    const MIN_INTERVAL = 0.03 * 60 * 1000;  // 2 sec
 
     let lastFetchTime = 0;
 
