--- a/public/grecha.html
+++ b/public/grecha.html
@@ -62,6 +62,14 @@
             text-align: center;
             padding: 10px;
         }
+
+        #downloadCsv {
+            display: block;
+            margin: 20px auto;
+            padding: 8px 16px;
+            font-size: 16px;
+            cursor: pointer;
+        }
     </style>
 </head>
 <body>
