--- a/public/leaderboard.html
+++ b/public/leaderboard.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>ГРЕЧЕМОЛКА 1.0</title>
+    <title>ГРЕЧЕМОЛКА 2.0</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
         body {
@@ -79,7 +79,7 @@
     </style>
 </head>
 <body>
-<h1>ГРЕЧЕМОЛКА 1.0 - leaderboard</h1>
+<h1>ГРЕЧЕМОЛКА 2.0 - leaderboard</h1>
 
 <div id="leaderboard">
     <div class="leaderboard-header">
@@ -104,7 +104,7 @@
     const SINCE_MS     = new Date(SINCE_DATETIME).getTime();
     const UNTIL_MS     = new Date(UNTIL_DATETIME).getTime();
     const BATCH = 200;
-    const MIN_INTERVAL = 5 * 60 * 1000;  // 5 минут
+    const MIN_INTERVAL = 1 * 60 * 1000;  // 1 minute
 
     let lastFetchTime = 0;
     let lastSorted = [];
