grechemolka-dev.html

--- a/public/grechemolka-dev.html
+++ b/public/grechemolka-dev.html
@@ -81,6 +81,15 @@
 <body>
 <h1>ГРЕЧЕМОЛКА 2.0 - leaderboard</h1>
 
+<section class="day-select">
+    <button id="day1">День 1</button>
+    <button id="day2">День 2</button>
+    <button id="day3">День 3</button>
+    <button id="day4">День 4</button>
+    <button id="day5">День 5</button>
+    <button id="day6">День 6</button>
+</section>
+
 <div id="leaderboard">
     <div class="leaderboard-header">
         <div class="col-1">№</div>
