grechemolka-dev.html

--- a/public/grechemolka-dev.html
+++ b/public/grechemolka-dev.html
@@ -76,6 +76,23 @@
             text-align: center;
             padding:10px;
         }
+
+        section.day-select {
+            display: flex;
+            align-items: center;
+            margin: 0 5px 5px;
+            justify-content: space-between;
+        }
+        section.day-select button {
+            display: flex;
+            align-items: center;
+            background: #bb37fc;
+            color: ivory;
+            text-shadow: 4px 4px 5px #9541AC;
+            border-radius: 5px;
+            padding: 5px 10px;
+            cursor: pointer;
+        }
     </style>
 </head>
 <body>
