grechemolka-dev.html

--- a/public/grechemolka-dev.html
+++ b/public/grechemolka-dev.html
@@ -93,6 +93,13 @@
             padding: 5px 10px;
             cursor: pointer;
         }
+
+        @media (max-width: 480px) {
+            section.day-select button {
+                padding: 4px 6px;
+                height: -webkit-fill-available;
+            }
+        }
     </style>
 </head>
 <body>
