grechemolka-dev.html

--- a/public/grechemolka-dev.html
+++ b/public/grechemolka-dev.html
@@ -93,6 +93,9 @@
             padding: 5px 10px;
             cursor: pointer;
         }
+        section.day-select button#dayD {
+            background: #651c8a;
+        }
 
         @media (max-width: 480px) {
             section.day-select button {
