grechemolka 2.0 with days buttons

--- a/public/leaderboard.html
+++ b/public/leaderboard.html
@@ -99,7 +99,7 @@
 
         @media (max-width: 480px) {
             section.day-select button {
-                padding: 4px 6px;
+                padding: 3px;
                 height: -webkit-fill-available;
             }
         }
