grechemolka 2.0 setActiveButton(activeBtn)

--- a/public/grechemolka-dev.html
+++ b/public/grechemolka-dev.html
@@ -94,7 +94,7 @@
             cursor: pointer;
         }
         section.day-select button#dayD {
-            background: #651c8a;
+            border-color: whitesmoke;
         }
 
         section.day-select button.active-day {
@@ -104,7 +104,7 @@
 
         @media (max-width: 480px) {
             section.day-select button {
-                padding: 4px 6px;
+                padding: 3px;
                 height: -webkit-fill-available;
             }
         }
