--- a/public/grechemolka-dev.html
+++ b/public/grechemolka-dev.html
@@ -112,6 +112,7 @@
 </head>
 <body>
 <h1>ГРЕЧЕМОЛКА 2.0 - leaderboard</h1>
+<h3>закидывай GRECHA и YUM на grecha_duplo.near</h3>
 
 <section class="day-select">
     <button id="day1">Day 1</button>
