--- a/public/grechemolka-dev.html
+++ b/public/grechemolka-dev.html
@@ -18,6 +18,9 @@
             color: ivory;
             text-shadow: 4px 4px 5px #9541AC;
         }
+        h4.subtitle {
+            text-align: center;
+        }
 
         #downloadCsv {
             display: block;
@@ -112,7 +115,7 @@
 </head>
 <body>
 <h1>ГРЕЧЕМОЛКА 2.0 - leaderboard</h1>
-<h3>закидывай GRECHA и YUM на grecha_duplo.near</h3>
+<h4 class="subtitle">закидывай GRECHA и YUM на grecha_duplo.near</h4>
 
 <section class="day-select">
     <button id="day1">Day 1</button>
