--- a/public/grechemolka-dev.html
+++ b/public/grechemolka-dev.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="ru" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <title>ГРЕЧЕМОЛКА 2.0</title>
@@ -19,6 +19,34 @@
             text-shadow: 4px 4px 5px #9541AC;
         }
         h4.subtitle {
+            text-align: center;
+            margin: -20px auto 20px;
+            color: ivory;
+            text-shadow: -1px 1px 5px #000;
+            font-family: fantasy, sans-serif;
+            font-weight: 700;
+            font-size: 19px;
+        }
+
+        #custom-alert {
+            display: none;
+            position: fixed;
+            top: 0; left: 0; right: 0; bottom: 0;
+            background: rgba(0, 0, 0, 0.5);
+            color: white;
+            font-size: 1.5rem;
+            justify-content: center;
+            align-items: center;
+            z-index: 9999;
+            opacity: 0;
+            transition: opacity 0.3s ease;
+        }
+        #custom-alert-text {
+            background: #333;
+            padding: 1rem 2rem;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.7);
+            margin: auto 30px;
             text-align: center;
         }
 
@@ -115,7 +143,12 @@
 </head>
 <body>
 <h1>ГРЕЧЕМОЛКА 2.0 - leaderboard</h1>
-<h4 class="subtitle">закидывай GRECHA и YUM на grecha_duplo.near</h4>
+<h4 class="subtitle">GRECHA и YUM на <span class="copy-address" style="cursor:pointer;">grecha_duplo.near</span></h4>
+
+<!-- Контейнер для кастомного алерта -->
+<div id="custom-alert">
+    <div id="custom-alert-text"></div>
+</div>
 
 <section class="day-select">
     <button id="day1">Day 1</button>
@@ -316,6 +349,58 @@
         .addEventListener('click', downloadCsv);
 
     window.addEventListener('DOMContentLoaded', renderBoard);
+
+    // Находим элемент
+    const copyAddress = document.querySelector('.copy-address');
+    const alertOverlay = document.getElementById('custom-alert');
+    const alertText = document.getElementById('custom-alert-text');
+    let alertTimeout;
+
+    copyAddress.addEventListener('click', async () => {
+        try {
+            await navigator.clipboard.writeText(copyAddress.textContent.trim());
+            showCustomAlert('Адрес скопирован в буфер обмена!');
+        } catch (err) {
+            fallbackCopyTextToClipboard(copyAddress.textContent.trim());
+        }
+    });
+
+    function fallbackCopyTextToClipboard(text) {
+        const textArea = document.createElement("textarea");
+        textArea.value = text;
+        textArea.style.position = "fixed";
+        textArea.style.left = "-9999px";
+        document.body.appendChild(textArea);
+        textArea.focus();
+        textArea.select();
+
+        try {
+            const successful = document.execCommand('copy');
+            if (successful) showCustomAlert('Адрес скопирован в буфер обмена!');
+            else showCustomAlert('Не удалось скопировать адрес');
+        } catch (err) {
+            showCustomAlert('Не удалось скопировать адрес');
+        }
+
+        document.body.removeChild(textArea);
+    }
+
+    function showCustomAlert(message) {
+        clearTimeout(alertTimeout);
+        alertText.textContent = message;
+        alertOverlay.style.display = 'flex';
+        // Запускаем анимацию появления
+        requestAnimationFrame(() => {
+            alertOverlay.style.opacity = '1';
+        });
+        // Через 1 секунду скрываем
+        alertTimeout = setTimeout(() => {
+            alertOverlay.style.opacity = '0';
+            alertOverlay.addEventListener('transitionend', () => {
+                alertOverlay.style.display = 'none';
+            }, { once: true });
+        }, 1000);
+    }
 </script>
 </body>
 </html>
