--- a/public/grechemolka-dev.html
+++ b/public/grechemolka-dev.html
@@ -143,7 +143,7 @@
 </head>
 <body>
 <h1>ГРЕЧЕМОЛКА 2.0 - leaderboard</h1>
-<h4 class="subtitle">GRECHA и YUM на <span class="copy-address" style="cursor:pointer;">grecha_duplo.near</span></h4>
+<h4 class="subtitle">GRECHA & YUM на <span class="copy-address" style="cursor:pointer;">grecha_duplo.near</span></h4>
 
 <!-- Контейнер для кастомного алерта -->
 <div id="custom-alert">
