--- a/public/leaderboard.html
+++ b/public/leaderboard.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <title>ГРЕЧЕМОЛКА 2.0</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -23,8 +27,9 @@
             margin: -20px auto 20px;
             color: ivory;
             text-shadow: -1px 1px 5px #000;
-            font-family: fantasy, sans-serif;
-            font-weight: 700;
+            font-family: "Space Mono", monospace;
+            font-weight: 400;
+            font-style: normal;
             font-size: 19px;
         }
         .copy-address:after {
