--- a/public/leaderboard.html
+++ b/public/leaderboard.html
@@ -32,13 +32,18 @@
             font-style: normal;
             font-size: 19px;
         }
+        .copy-address {
+            display: inline-flex;
+            align-items: center;
+            gap: 5px;
+            cursor: pointer;
+        }
         .copy-address:after {
             content: '';
             display: inline-flex;
             align-items: center;
             position: relative;
-            right: -3px;
-            top: -4px;
+            top: 1px;
             width: 20px;
             height: 20px;
             background-image: url('data:image/svg+xml,<!--%3Fxml version="1.0" encoding="UTF-8"%3F--><!-- The Best Svg Icon site in the world: iconSvg.co, Visit us! https://iconsvg.co --><svg id="svg" fill="%23ffffff" stroke="%23ffffff" width="200" height="200" version="1.1" viewBox="144 144 512 512" xmlns="http://www.w3.org/2000/svg"><g id="IconSvg_bgCarrier" stroke-width="0"></g><g id="IconSvg_tracerCarrier" stroke-linecap="round" stroke-linejoin="round" stroke="%23CCCCCC" stroke-width="0"><path xmlns="http://www.w3.org/2000/svg" d="m578.43 211.07h-293.89c-6.2969 0-10.496 4.1992-10.496 10.496v41.984h-52.48c-6.2969 0-10.496 4.1992-10.496 10.496v304.39c0 6.2969 4.1992 10.496 10.496 10.496h295.99c6.2969 0 10.496-4.1992 10.496-10.496v-45.133l50.379-0.003906c6.2969 0 10.496-4.1992 10.496-10.496v-301.23c0-6.2969-4.1953-10.496-10.496-10.496zm-71.371 356.86h-275v-283.39h51.43 1.0508 222.52zm60.875-55.629h-39.887l0.003906-238.26c0-6.2969-4.1992-10.496-10.496-10.496h-222.52v-31.488h272.9z"></path></g><g id="IconSvg_iconCarrier"><path xmlns="http://www.w3.org/2000/svg" d="m578.43 211.07h-293.89c-6.2969 0-10.496 4.1992-10.496 10.496v41.984h-52.48c-6.2969 0-10.496 4.1992-10.496 10.496v304.39c0 6.2969 4.1992 10.496 10.496 10.496h295.99c6.2969 0 10.496-4.1992 10.496-10.496v-45.133l50.379-0.003906c6.2969 0 10.496-4.1992 10.496-10.496v-301.23c0-6.2969-4.1953-10.496-10.496-10.496zm-71.371 356.86h-275v-283.39h51.43 1.0508 222.52zm60.875-55.629h-39.887l0.003906-238.26c0-6.2969-4.1992-10.496-10.496-10.496h-222.52v-31.488h272.9z"></path></g></svg>');
@@ -160,7 +165,7 @@
 </head>
 <body>
 <h1>ГРЕЧЕМОЛКА 2.0 - leaderboard</h1>
-<h4 class="subtitle"><span class="copy-address" style="cursor:pointer;">grecha_duplo.near</span></h4>
+<h4 class="subtitle"><div class="copy-address">grecha_duplo.near</div></h4>
 
 <!-- Custom Alert Container -->
 <div id="custom-alert">
