--- a/public/leaderboard.html
+++ b/public/leaderboard.html
@@ -145,6 +145,7 @@
             border-radius: 5px;
             padding: 5px 10px;
             cursor: pointer;
+            max-height: 35px;
         }
         section.day-select button#dayD {
             border-color: whitesmoke;
